# bombaystudio

./: .gitignore  .replit  main.py  pyproject.toml  replit.md  replit.nix
flask-app/: app.py  engine.py  faces.db  faces.db-shm  faces.db-wal  storage.py  watcher.py
flask-app/templates/: admin.html  admin_change_password.html  admin_login.html  base.html  find_my_photos.html  guest.html  index.html  login.html  register.html  results.html
